trying to fix reverse rotation on mobile

--- a/weatherSecond.css
+++ b/weatherSecond.css
@@ -8,7 +8,7 @@
     --white: rgba(255, 250, 234, 0.931);
     --lightGray: rgb(116, 116, 116);
     --white50: rgba(255, 255, 255, 0.497);
-    --deg: 40deg; 
+    --deg: 45deg; 
     --color: rgb(203, 143, 4); 
 }
 
